[package]
name = "blockchain-benches"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "parity-bench"
path = "src/parity/bench.rs"

[[bin]]
name = "fst-bench"
path = "src/fst/bench.rs"

[[bin]]
name = "fjall-bench"
path = "src/fjall/bench.rs"

[[bin]]
name = "redb-bench"
path = "src/redb/bench.rs"

[[bin]]
name = "rocksdb-bench"
path = "src/rocksdb/bench.rs"

[[bin]]
name = "fst-txhash-bench"
path = "src/fst/bench_txhash.rs"


[dependencies]
bs58 = "0.5"
bech32 = "0.9.0"
crossbeam-channel = "0.5"
parity-db = "0.5.4"
rand = "0.9.2"
fst = "0.4.7"
memmap2 = "0.9"
fjall = "2.11.2"
hex = "0.4"
redb = "3.1.0"
rocksdb = { version = "0.24", default-features = false, features = ["multi-threaded-cf", "zstd"] }

[dev-dependencies]
tempfile = "3"
