[package]
edition = "2024"
name = "rocksdb-bench"
version.workspace = true

[[bin]]
name = "rocksdb-bench"
path = "src/bench.rs"

[dependencies]
rocksdb = { version = "0.24", default-features = false, features = ["multi-threaded-cf", "zstd"] }
core = { path = "../../core" }

[dev-dependencies]
tempfile = "3.23.0"